fix too much z

--- a/src/scss/main/utilities.scss
+++ b/src/scss/main/utilities.scss
@@ -14,7 +14,7 @@ body,
 	}
 
 	.extra-z-index {
-		z-index: 1000 !important;
+		z-index: 15 !important;
 	}
 
 	// primary gradients
